Fix spacing in address-card and letter spacing in title input (#2016)

--- a/frontend/src/app/+form/form-info/header-title-row/header-title-row.component.scss
+++ b/frontend/src/app/+form/form-info/header-title-row/header-title-row.component.scss
@@ -77,7 +77,7 @@
     font-size: 34px;
     line-height: 42px;
 
-    ::ng-deep input {
+    ::ng-deep textarea {
       letter-spacing: 0.4px !important;
     }
   }
