--- a/frontend/src/app/formly/types/address-type/address-card/address-card.component.scss
+++ b/frontend/src/app/formly/types/address-type/address-card/address-card.component.scss
@@ -56,7 +56,7 @@ mat-card {
       font-size: 16px;
     }
 
-    .email {
+    &.email {
       padding-top: 8px;
     }
   }
